Printing improvements and code clean up